# DojoAIRust

./: .gitignore  Cargo.toml  README.md
src/: detection_rectangle.rs  detector.rs  main.rs  recognizer.rs
